--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ div.menu {
 div.menu ul,
 div.menu ul li {
     margin: 0;
-    padding: 0 ;
+    padding: 0;
     list-style: none;
     display: inline-block;
 }
@@ -32,7 +32,7 @@ div.menu ul li a {
     margin: 0;
 }
 
-div.menu ul li a:hover  {
+div.menu ul li a:hover {
     background-color: white;
     color: #4d5791;
 }
@@ -40,7 +40,7 @@ div.menu ul li a:hover  {
 div.hero {
     height: 350px;
     background-color: #b4c6f0;
-    background-image: url('/bg.png');
+    background-image: url("/bg.png");
     background-size: 400px;
     background-repeat: no-repeat;
     background-position: center bottom;
