first half of coding exercise 02 / assignment 05

--- a/personal-budget/src/app/menu/menu.component.html
+++ b/personal-budget/src/app/menu/menu.component.html
@@ -1,7 +1,8 @@
 <nav aria-label="Main Navigation">
-    <ul>
-        <li><a [routerLink]="['/']" aria-label="Homepage">Home</a></li>
-        <li><a [routerLink]="['/about']" aria-label="About Us">About</a></li>
-        <li><a [routerLink]="['/login']" aria-label="Login">Login</a></li>
-    </ul>
+  <ul>
+    <li><a [routerLink]="['/']" aria-label="Homepage">Home</a></li>
+    <li><a [routerLink]="['/about']" aria-label="About Us">About</a></li>
+    <li><a [routerLink]="['/login']" aria-label="Login">Login</a></li>
+    <li><a [routerLink]="['/contact']" aria-label="Contact Us">Contact</a></li>
+  </ul>
 </nav>
