--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -1,4 +1,5 @@
 <main class="center">
+  <pb-breadcrumbs></pb-breadcrumbs>
   <div class="page-area">
     <pb-article>
       <h1>Stay on track</h1>
